<resources>
    <string name="app_name">Passing Datakt</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_ph_number">Enter Your Number</string>
    <string name="send">Send</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="enter_todo">Enter Todo Items</string>
    <string name="add">Add</string>
    <string name="show_notification">Show Notification</string>
</resources>